python-shell-p14/src/parserTree/CommandParser.py
# Generated from Command.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
from typing import TextIO



class CommandParser(Parser):

    grammarFileName = "Command.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "';'", "'|'", "'<'", "'>'"]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "SINGLE_QUOTED",
        "BACKQUOTED",
        "DOUBLE_QUOTED",
        "UNQUOTED",
        "WS",
    ]

    RULE_command = 0
    RULE_partialSeq = 1
    RULE_prefixCall = 2
    RULE_partialPipe = 3
    RULE_call = 4
    RULE_atom = 5
    RULE_argument = 6
    RULE_redirection = 7
    RULE_quoted = 8
    RULE_unquoted = 9

    ruleNames = [
        "command",
        "partialSeq",
        "prefixCall",
        "partialPipe",
        "call",
        "atom",
        "argument",
        "redirection",
        "quoted",
        "unquoted",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    SINGLE_QUOTED = 5
    BACKQUOTED = 6
    DOUBLE_QUOTED = 7
    UNQUOTED = 8
    WS = 9

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class CommandContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prefixCall(self):
            return self.getTypedRuleContext(CommandParser.PrefixCallContext, 0)

        def partialSeq(self):
            return self.getTypedRuleContext(CommandParser.PartialSeqContext, 0)

        def getRuleIndex(self):
            return CommandParser.RULE_command

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCommand"):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)

    def command(self):

        localctx = CommandParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_command)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.prefixCall()
            self.state = 22
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 1:
                self.state = 21
                self.partialSeq()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PartialSeqContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prefixCall(self):
            return self.getTypedRuleContext(CommandParser.PrefixCallContext, 0)

        def partialSeq(self):
            return self.getTypedRuleContext(CommandParser.PartialSeqContext, 0)

        def getRuleIndex(self):
            return CommandParser.RULE_partialSeq

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPartialSeq"):
                return visitor.visitPartialSeq(self)
            else:
                return visitor.visitChildren(self)

    def partialSeq(self):

        localctx = CommandParser.PartialSeqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_partialSeq)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(CommandParser.T__0)
            self.state = 25
            self.prefixCall()
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 1:
                self.state = 26
                self.partialSeq()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrefixCallContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def call(self):
            return self.getTypedRuleContext(CommandParser.CallContext, 0)

        def partialPipe(self):
            return self.getTypedRuleContext(CommandParser.PartialPipeContext, 0)

        def getRuleIndex(self):
            return CommandParser.RULE_prefixCall

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPrefixCall"):
                return visitor.visitPrefixCall(self)
            else:
                return visitor.visitChildren(self)

    def prefixCall(self):

        localctx = CommandParser.PrefixCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_prefixCall)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.call()
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 2:
                self.state = 30
                self.partialPipe()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PartialPipeContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def call(self):
            return self.getTypedRuleContext(CommandParser.CallContext, 0)

        def partialPipe(self):
            return self.getTypedRuleContext(CommandParser.PartialPipeContext, 0)

        def getRuleIndex(self):
            return CommandParser.RULE_partialPipe

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPartialPipe"):
                return visitor.visitPartialPipe(self)
            else:
                return visitor.visitChildren(self)

    def partialPipe(self):

        localctx = CommandParser.PartialPipeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_partialPipe)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.match(CommandParser.T__1)
            self.state = 34
            self.call()
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 2:
                self.state = 35
                self.partialPipe()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CallContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self):
            return self.getTypedRuleContext(CommandParser.ArgumentContext, 0)

        def WS(self, i: int = None):
            if i is None:
                return self.getTokens(CommandParser.WS)
            else:
                return self.getToken(CommandParser.WS, i)

        def redirection(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(CommandParser.RedirectionContext)
            else:
                return self.getTypedRuleContext(CommandParser.RedirectionContext, i)

        def atom(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(CommandParser.AtomContext)
            else:
                return self.getTypedRuleContext(CommandParser.AtomContext, i)

        def getRuleIndex(self):
            return CommandParser.RULE_call

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCall"):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)

    def call(self):

        localctx = CommandParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_call)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 9:
                self.state = 38
                self.match(CommandParser.WS)
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 3 or _la == 4:
                self.state = 44
                self.redirection()
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 45
                    self.match(CommandParser.WS)
                    self.state = 48
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la == 9):
                        break

                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 55
            self.argument()
            self.state = 59
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 7, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 56
                    self.match(CommandParser.WS)
                self.state = 61
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 7, self._ctx)

            self.state = 70
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 9, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 63
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 62
                        self.match(CommandParser.WS)
                        self.state = 65
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la == 9):
                            break

                    self.state = 67
                    self.atom()
                self.state = 72
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 9, self._ctx)

            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 9:
                self.state = 73
                self.match(CommandParser.WS)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AtomContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def redirection(self):
            return self.getTypedRuleContext(CommandParser.RedirectionContext, 0)

        def argument(self):
            return self.getTypedRuleContext(CommandParser.ArgumentContext, 0)

        def getRuleIndex(self):
            return CommandParser.RULE_atom

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAtom"):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)

    def atom(self):

        localctx = CommandParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_atom)
        try:
            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.redirection()
                pass
            elif token in [5, 6, 7, 8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.argument()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def quoted(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(CommandParser.QuotedContext)
            else:
                return self.getTypedRuleContext(CommandParser.QuotedContext, i)

        def unquoted(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(CommandParser.UnquotedContext)
            else:
                return self.getTypedRuleContext(CommandParser.UnquotedContext, i)

        def getRuleIndex(self):
            return CommandParser.RULE_argument

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitArgument"):
                return visitor.visitArgument(self)
            else:
                return visitor.visitChildren(self)

    def argument(self):

        localctx = CommandParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_argument)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 85
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [5, 6, 7]:
                    self.state = 83
                    self.quoted()
                    pass
                elif token in [8]:
                    self.state = 84
                    self.unquoted()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3F) == 0 and ((1 << _la) & 480) != 0):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RedirectionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self):
            return self.getTypedRuleContext(CommandParser.ArgumentContext, 0)

        def WS(self, i: int = None):
            if i is None:
                return self.getTokens(CommandParser.WS)
            else:
                return self.getToken(CommandParser.WS, i)

        def getRuleIndex(self):
            return CommandParser.RULE_redirection

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitRedirection"):
                return visitor.visitRedirection(self)
            else:
                return visitor.visitChildren(self)

    def redirection(self):

        localctx = CommandParser.RedirectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_redirection)
        self._la = 0  # Token type
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(CommandParser.T__2)
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == 9:
                    self.state = 90
                    self.match(CommandParser.WS)
                    self.state = 95
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 96
                self.argument()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.match(CommandParser.T__3)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == 9:
                    self.state = 98
                    self.match(CommandParser.WS)
                    self.state = 103
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 104
                self.argument()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QuotedContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SINGLE_QUOTED(self):
            return self.getToken(CommandParser.SINGLE_QUOTED, 0)

        def BACKQUOTED(self):
            return self.getToken(CommandParser.BACKQUOTED, 0)

        def DOUBLE_QUOTED(self):
            return self.getToken(CommandParser.DOUBLE_QUOTED, 0)

        def getRuleIndex(self):
            return CommandParser.RULE_quoted

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitQuoted"):
                return visitor.visitQuoted(self)
            else:
                return visitor.visitChildren(self)

    def quoted(self):

        localctx = CommandParser.QuotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_quoted)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            _la = self._input.LA(1)
            if not (((_la) & ~0x3F) == 0 and ((1 << _la) & 224) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UnquotedContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNQUOTED(self):
            return self.getToken(CommandParser.UNQUOTED, 0)

        def getRuleIndex(self):
            return CommandParser.RULE_unquoted

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitUnquoted"):
                return visitor.visitUnquoted(self)
            else:
                return visitor.visitChildren(self)

    def unquoted(self):

        localctx = CommandParser.UnquotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_unquoted)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(CommandParser.UNQUOTED)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
